--- a/TODO.txt
+++ b/TODO.txt
@@ -1,48 +1,17 @@
 
-Improved DB Security
---------------------
+* Need to gather MAC addresses and include in submitted data.
+  Nees to be done live at scraper level, as IP's change.  Provides
+  the 'key'.  (yes MACs can be hacked, but most wont be).
 
-Better to have two user type:  can write (cant read), can read (cant write)
+  Not sure best way to do this.  Probably keep an in memory map
+  of IP to MAC and fetch when a new IP is found.  Also, aging;
+  drop 'old' mappings.  Lots of potential config: aging time etc.
+  (See perl Net::ARP::arp_lookup('eth0') etc.; also ip(1) neighbour show)
 
-* loggers needs write
-* analysis needs read
+  With that 'key' one could then, for example, allow a 'comments'
+  section on a host: user defined content.
 
-Data log scrapers
------------------
-
-They should start with a database connection so that if this
-fails it is known at the 'service start' point.
-
-They *must* use the system log.
-
-Reporting
----------
-
-Need to have a defined set of standard queries (view
-definitions) for:
-
-- who is a dumb user (lots of Web logs corresponding to 
-  DNS logs)
-- who is infected (lots of DNS logs, with little correspoding
-  Web logs)
-- Who is both infected and dumb (lots of both logs, but
-  little correlation between many DNS logs and a Web log)
-
-Reporting:  Ideas
-``````````````````
-
-Within a period of time select ip_address, count(*) (group by)
-so you have the number of times for the IP address (for each
-table).
-
-Then you need the ones that match (dumb user) and the ones
-that dont (the difference) ie. infected, correlated in time.
-
-(more to it ...)
-
-
-Putting it all together
------------------------
-
-A web-site that shows the analysis.  Download reports in
-standardised form.
+  AND !!!  we would really like to be able to query the LAN switches
+  and identify which switch port the client is connected to, which
+  may change over time.  i.e track the location and movement of the
+  computer.
